work on thesis, fix sidenotes

--- a/main.tex
+++ b/main.tex
@@ -64,10 +64,10 @@
 \setchapterstyle{plain}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\dedication{
-	Dedicated to the dedicated.\\
-	\flushright -- Pascal Sager
-}
+%\dedication{
+%	Dedicated to the dedicated.\\
+%	\flushright -- Pascal Sager
+%}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \KOMAoptions{twoside=semi}
@@ -136,6 +136,14 @@
 \setchapterpreamble[u]{\margintoc}
 \chapter{Preliminary Study}\chlbl{pre_study}
 \input{tex/pre_study}
+
+\setchapterpreamble[u]{\margintoc}
+\chapter{Methods}\chlbl{methods}
+\input{tex/methods}
+
+\setchapterpreamble[u]{\margintoc}
+\chapter{Results}\chlbl{results}
+\input{tex/results}
 
 \setchapterpreamble[u]{\margintoc}
 \chapter{Future Work}\chlbl{future_work}
