--- a/styles/phdbibliobyphd.sty
+++ b/styles/phdbibliobyphd.sty
@@ -3,8 +3,8 @@
 \ProvidesPackage{styles/phdbibliobyphd}[2020/06/09 valpha-1.0 phdbibliobyphd]
 
 \RequirePackage{etoolbox}   % for programming LaTeX classes
-\RequirePackage{calc}       % for some math
-\RequirePackage{marginnote} % provides \marginnote ~ \marginpar
+%\RequirePackage{calc}       % for some math
+%\RequirePackage{marginnote} % provides \marginnote ~ \marginpar
 \RequirePackage{perpage}    % for resetting counters
 \RequirePackage{xkeyval}    % for defining keys
 \RequirePackage{xparse}     % for \newcommand macros
@@ -58,29 +58,34 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Sidenote citations
 
-\newlength\sclen
+% \newlength\sclen
 
 \NewDocumentCommand{\citeay}{m}{%
 	\citeauthor*{#1} \parencite*{#1}%
 }
 
-\NewDocumentCommand{\sideciteay}{O{}O{}O{0pt}m}{%
+\NewDocumentCommand{\sideciteay}{O{}O{} o m}{%
 	\citeauthor*[#1][#2]{#4} \parencite*{#4}%
 	\margincitation[#3]{#4}%
 }
 
-\NewDocumentCommand{\sidecite}{O{}O{}O{0pt}m}{%
+\NewDocumentCommand{\sidecite}{O{}O{} o m}{%
 	\cite[#1][#2]{#4}%
+	\def\itemdelim{---}
 	\margincitation[#3]{#4}%
 }
 
-\NewDocumentCommand{\margincitation}{O{0pt}>{\SplitList{,}}m}{%
-	\setlength{\sclen}{#1-1pt}%
-	\marginnote[\sclen]{\ProcessList{#2}{\formatmargincitation}}%
-}
+\newcommand\margincitedelim{\\} % Choose the default separator for multiple citations
+\NewDocumentCommand{\margincitation}{o >{\SplitList{,}}m}{% The mandatory parameter is a comma-separated list of citation keys, which is splitted into single items
+ 	% Redefine the \margincitedelim with a delay (https://tex.stackexchange.com/questions/110898/package-xparse-splitlist-last-token). Users can 'renew' the \margincitedelim command in their main.tex.
+ 	\let\origmargincitedelim\margincitedelim
+ 	\renewcommand\margincitedelim{\renewcommand\margincitedelim{\origmargincitedelim}}
+ 	\marginnote[#1]{\ProcessList{#2}{\formatmargincitation}}% Create a marginnote for each item
+ 	\let\margincitedelim\origmargincitedelim% Reset
+ }
 
 \NewDocumentCommand{\formatmargincitation}{m}{%
-	\parencite{#1}: \citeauthor*{#1} (\citeyear{#1})\\%, \citetitle{#1}\\%
+	\margincitedelim\parencite{#1}: \citeauthor*{#1} (\citeyear{#1})\\%, \citetitle{#1}\\%
 }
 
 \newbibmacro*{volume+number+pp}{%
